--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,8 @@
-version: '3.4'
-
+version: '3'
 services:
   web:
-    image: web
     build:
       context: .
-      dockerfile: ./Dockerfile.dev
-    environment:
-      NODE_ENV: development
+      dockerfile: Dockerfile
     ports:
-      - 3000:3000
-    volumes:
-      - /app/node_modules
-      - .:/app
-  tests:
-    build:
-      context: .
-      dockerfile: ./Dockerfile.dev
-    environment:
-      NODE_ENV: test
-    volumes:
-      - /app/node_modules
-      - .:/app
-    command: [ "npm", "run", "test" ]
+      - '80:80'
